tests/errors/void_return_nonvoid.orus
fn qux() -> string {
    return
}

fn main() {}
